# ferris-says

./: .travis.yml  CODE-OF-CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  appveyor.yml
.github/workflows/: ci.yml
fsays/: Cargo.toml
fsays/src/: main.rs
src/: lib.rs
tests/: integration_test.rs
