[package]
name = "ferris-says"
version = "0.3.1"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
description = "A Rust flavored replacement for the classic cowsay"
documentation = "https://docs.rs/ferris-says"
homepage = "https://github.com/mgattozzi/ferris-says"
repository = "https://github.com/mgattozzi/ferris-says"
readme = "README.md"
keywords = ["ferris", "cowsay", "print", "fsays", "rustacean"]
categories = [
  "text-processing",
  "visualization",
  "rendering",
  "command-line-utilities",
  "value-formatting"
]
license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "mgattozzi/ferris-says", branch = "master" }
appveyor = { repository = "mgattozzi/ferris-says", branch = "master", service = "github" }

[lib]
name = "ferris_says"

[features]
clippy = []

[dependencies]
smallvec = "1.9.0"
textwrap = "0.13"
unicode-width = "0.1.7"

[workspace]
members = ["fsays"]
