[package]
name = "ferris-says"
version = "0.3.1"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2021"
description = "A Rust flavored replacement for the classic cowsay"
documentation = "https://docs.rs/ferris-says"
repository = "https://github.com/rust-lang/ferris-says"
readme = "README.md"
keywords = ["ferris", "cowsay", "print", "fsays", "rustacean"]
categories = [
  "text-processing",
  "visualization",
  "rendering",
  "command-line-utilities",
  "value-formatting"
]
license = "MIT OR Apache-2.0"

[features]
clippy = []

[dependencies]
regex = "1.10.4"
smallvec = "1.11.2"
textwrap = "0.16.0"
unicode-width = "0.1.11"

[workspace]
members = ["fsays"]
