[package]
name = "fsays"
version = "0.3.0"
authors = ["Michael Gattozzi <mgattozzi@gmail.com>"]
edition = "2021"
description = "A Rust flavored replacement for the classic cowsay"
documentation = "https://docs.rs/ferris-says"
repository = "https://github.com/rust-lang/ferris-says"
keywords = ["ferris", "cowsay", "print", "fsays", "rustacean"]
categories = [
  "text-processing",
  "visualization",
  "rendering",
  "command-line-utilities",
  "value-formatting"
]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ferris-says = { version = "0.3", path = ".." }
clap = "2.25"
